<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/app_black"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_black"
        android:text="@string/new_version_alert"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/size_10dp"
        android:id="@+id/textView2" />
    <TextView
        android:id="@+id/tv_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_gravity="right"
        android:textColor="@color/app_orange"
        android:text="@string/update"/>
</LinearLayout>