<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.securedcommunications.securedcomm.fragment.RegisterSetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/twenty_dp"
        android:paddingLeft="@dimen/thirty_dp"
        android:paddingRight="@dimen/thirty_dp"
        android:paddingTop="@dimen/twenty_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.securedcommunications.securedcomm.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_you_verified"
                android:textColor="@color/color_great"
                android:textSize="?attr/twenty_five_sp"
                app:fontType="italic" />

            <com.securedcommunications.securedcomm.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_please_protect"
                android:textSize="?attr/fourteen_sp"
                app:fontType="italic" />

            <com.securedcommunications.securedcomm.utility.MyEditText
                android:id="@+id/et_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_text"
                android:inputType="textPassword"
                android:textSize="?attr/fifteen_sp" />

            <com.securedcommunications.securedcomm.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:text="@string/title_minimum_password"
                android:textColor="@color/gray"
                android:textSize="?attr/fourteen_sp"
                android:textStyle="italic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/thirty_dp"
                android:layout_marginRight="@dimen/thirty_dp"
                android:layout_marginTop="@dimen/thirty_dp" >
                <View
                    android:id="@+id/view_progress_bar_base"
                    style="@style/ChangePasswordProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <View
                    android:id="@+id/view_progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/ChangePasswordProgressBar" />
            </RelativeLayout>

            <com.securedcommunications.securedcomm.utility.MyTextView
                android:id="@+id/tv_password_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:text="@string/title_password_strength"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_dp"
                android:textStyle="bold" />

            <com.securedcommunications.securedcomm.utility.MyEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_retype_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="?attr/fifteen_sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.securedcommunications.securedcomm.utility.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/title_password_desc"
                android:textColor="@color/gray"
                android:textSize="?attr/fifteen_sp"
                app:fontType="italic" />

            <Button
                android:id="@+id/btn_continue"
                style="@style/Register_Button"
                android:layout_width="@dimen/two_hundered_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/btn_next" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>