<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:id="@+id/tv_number_4"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/number4"
        android:textColor="@color/app_black"
        android:textSize="@dimen/size_Sp_30"
        android:padding="@dimen/size_20dp_keypad_padding"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:id="@+id/tv_number_5"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/number5"
        android:textSize="@dimen/size_Sp_30"
        android:padding="@dimen/size_20dp_keypad_padding"
        android:textColor="@color/app_black"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:id="@+id/tv_number_6"
        android:padding="@dimen/size_20dp_keypad_padding"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/size_Sp_30"
        android:text="@string/number6"
        android:textColor="@color/app_black"
        android:layout_gravity="center"
        android:gravity="center"/>

</LinearLayout>